# tinyrenderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/geometry/: CMakeLists.txt
lib/geometry/inc/geometry/: geometry.h
lib/geometry/src/: geometry.cpp
lib/tgaimage/: CMakeLists.txt  COPYRIGHT.tgaimage
lib/tgaimage/src/: tgaimage.cpp
lib/wavefrontobjloader/: CMakeLists.txt  COPYRIGHT.txt
lib/wavefrontobjloader/inc/wavefrontobjloader/: geometry.h  model.h
lib/wavefrontobjloader/src/: model.cpp
src/: main.cpp
